Prevent dismiss button from overlapping message text

--- a/source/components/banner.scss
+++ b/source/components/banner.scss
@@ -41,6 +41,7 @@
   }
 
   &-message {
+    margin-right: $space-large-b;
     margin-bottom: 0;
   }
 }
